KFSTP-1954 bump up the heap for unit tests